--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <div class="container">
+      <%= flash_messages %>
+
+      <div class="row">
+        <%= yield %>
+      </div>
+    </div>
+
   </body>
 </html>
