--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,11 @@
-<h2>Resend confirmation instructions</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-  <%= f.full_error :confirmation_token %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="col-md-10 col-lg-6 offset-md-1 offset-lg-3 card card-block">
+  <h2>Resend confirmation instructions</h2>
+  <%= simple_form_for resource, :as => resource_name,
+                                :url => confirmation_path(resource_name),
+                                :html => {:method => :post} do |f| %>
+    <%= f.input :email %>
+    <%= f.button :submit, "Resend confirmation instructions", class: 'btn-primary' %>
+  <% end %>
+  <br>
+  <%= render "devise/shared/links" %>
+</div>
