--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,12 @@
-<h2>Forgot your password?</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
+<div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4 card card-block">
+  <h2>Forgot your password?</h2>
+  <%= simple_form_for(resource, as: resource_name,
+                                url: password_path(resource_name),
+                                html: { method: :post }) do |f| %>
     <%= f.input :email, required: true, autofocus: true %>
-  </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
+    <%= f.button :submit, "Send me reset password instructions", class: 'btn-primary' %>
+  <% end %>
 
-<%= render "devise/shared/links" %>
+  <%= render "devise/shared/links" %>
+</div>
